--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ form {
 	padding: 5px;
 	top: 100%;
 	left: -5px;
+	right: -5px;
 	min-width: 100%;
 	border-radius: 4px;
 	background-color: #fff;
